[package]
name = "werewolf-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-stream = "0.1.6"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.4"
rand = "0.8.5"
futures = "0.3.15"
